VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedSmearedDown.err
[8MB/454.8MB][  1%][>                                                 ][2.667MB/s]  [72MB/454.8MB][ 15%][=======>                                          ][18MB/s]  [120MB/454.8MB][ 26%][=============>                                    ][24MB/s]  [160MB/454.8MB][ 35%][=================>                                ][26.67MB/s]  [200MB/454.8MB][ 43%][=====================>                            ][28.57MB/s]  [232MB/454.8MB][ 51%][=========================>                        ][29MB/s]  [256MB/454.8MB][ 56%][============================>                     ][28.44MB/s]  [288MB/454.8MB][ 63%][===============================>                  ][28.8MB/s]  [320MB/454.8MB][ 70%][===================================>              ][29.09MB/s]  [344MB/454.8MB][ 75%][=====================================>            ][28.67MB/s]  [376MB/454.8MB][ 82%][=========================================>        ][28.92MB/s]  [392MB/454.8MB][ 86%][===========================================>      ][28MB/s]  [416MB/454.8MB][ 91%][=============================================>    ][27.73MB/s]  [432MB/454.8MB][ 94%][===============================================>  ][27MB/s]  [448MB/454.8MB][ 98%][=================================================>][26.35MB/s]  [454.8MB/454.8MB][100%][==================================================][26.75MB/s]  [454.8MB/454.8MB][100%][==================================================][26.75MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_128095/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_128095/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
